# teakra

./: .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md  appveyor.yml
.github/workflows/: build.yaml
.travis/: linux-build.sh  macos-build.sh  windows-build.sh
dspapbptester/firm/: source
dspapbptester/source/: main.cpp
dspmemorytester/firm/: source
dsptester/: Makefile  send-program-self.py  send-program.py
dsptester/firm/: source
dsptester/source/: main.cpp
include/teakra/: disassembler.h  teakra.h  teakra_c.h
makefirm/: Makefile
makefirm/src/: common_types.h  main.cpp
src/: CMakeLists.txt  README.md  ahbm.cpp  ahbm.h  ahbm.md  apbp.cpp  apbp.h  apbp.md  bit.h  btdmp.cpp  btdmp.h  btdmp.md  citra.cpp  citra.h  common_types.h  core.cpp  core.h  core_timing.h  crash.h  cru.md  decoder.h  disassembler.cpp  disassembler.h  dma.cpp  dma.h  dma.md  dsp1.cpp  dsp1.h  icu.h  icu.md  interpreter.h  main.cpp  matcher.h  memory.h  memory_interface.cpp  memory_interface.h  mmio.cpp  mmio.h  ocem.md  operand.h  (+15 more)
src/coff_reader/: coff.h  main.cpp
src/dsp1_reader/: main.cpp
src/makedsp1/: main.cpp  sha256.cpp
src/mod_test_generator/: main.cpp
src/step2_test_generator/: main.cpp
src/test_generator/: main.cpp
src/test_verifier/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  dma.cpp  interpreter.cpp
testsuite/: Makefile  icon.icn
testsuite/firm/: source
testsuite/source/: main.cpp
